--- a/frontend/src/pages/Clients/Clients.css
+++ b/frontend/src/pages/Clients/Clients.css
@@ -30,6 +30,7 @@
     display: flex;
     justify-content: start;
     gap: 20px;
+    margin-top: 20px;
     flex-wrap: wrap;
 }
 
